--- a/public/index.html
+++ b/public/index.html
@@ -30,21 +30,22 @@
     -->
     <title>React App</title>
 
-    <style>
-        html {
-            min-height: 100%;
-        }
+<!--    <style>-->
+<!--        html {-->
+<!--            min-height: 100%;-->
+<!--        }-->
 
-        .bg {
-            background-image: url(/images/loginPage.jpg);
-            height: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-    </style>
+<!--        .bg {-->
+<!--            background-image: url(/images/loginPage.jpg);-->
+<!--            height: 100%;-->
+<!--            background-position: center;-->
+<!--            background-repeat: no-repeat;-->
+<!--            background-size: cover;-->
+<!--        }-->
+<!--    </style>-->
 </head>
-<body class="bg">
+<!--<body class="bg">-->
+<body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <!--
